compiler/tests/ar/errors/noret_ret_ar.salam
// لغة: العربية
// EXPECT: E012
لايرجع دالة مت():
    أرجع
نهاية

دالة الرئيسية:
    مت()
نهاية
